<resources>
    <string name="app_name">Spenzo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">"Don't have an account? "</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="have_an_account">"Have an account? "</string>
    <string name="menu_home">Home</string>
    <string name="menu_add">Add</string>
    <string name="menu_profile">Profile</string>
    <string name="hi_user">Hi, User!</string>
    <string name="search">Search</string>
    <string name="there_are_no_transactions">There are no transactions</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="title">Title</string>
    <string name="amount">Amount</string>
    <string name="category">Category</string>
    <string name="type">Type</string>
    <string name="note">Note</string>
    <string name="date">Date</string>
    <string name="save">Save</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="example_text">Example Text</string>
    <string name="edit">Edit</string>
    <string name="edit_transaction">Edit Transaction</string>
    <string name="total_balance">TOTAL BALANCE</string>
    <string name="total_income">TOTAL INCOME</string>
    <string name="total_expense">TOTAL EXPENSE</string>
    <string name="success_transaction_delete">Transaction deleted successfully!</string>
    <string name="text_undo">Undo</string>
    <string name="settings">Settings</string>
    <string name="select_currency">Select Currency</string>
    <string name="switch_theme">Switch Theme</string>
    <string name="logout">Logout</string>
    <string name="currency_converter">Currency Converter</string>
    <string name="enter_amount">Enter amount</string>
    <string name="converted_amount">Converted amount</string>
    <string name="convert">Convert</string>

    <string-array name="spinner_transactionCategories">
        <item>All</item>
        <item>Housing</item>
        <item>Transportation</item>
        <item>Food</item>
        <item>Utilities</item>
        <item>Insurance</item>
        <item>Healthcare</item>
        <item>Saving &amp; Debts</item>
        <item>Personal Spending</item>
        <item>Entertainment</item>
        <item>Miscellaneous</item>
    </string-array>

    <string-array name="spinner_transactionTypes">
        <item>All</item>
        <item>Expense</item>
        <item>Income</item>
    </string-array>
</resources>