<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dimen_16dp"
    tools:context=".presentation.fragment.SignUpFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_16dp"
        android:contentDescription="@string/sign_in"
        android:scaleType="center"
        android:src="@drawable/logo_sign_up" />

    <TextView
        style="@style/LargeTextView"
        android:layout_marginBottom="@dimen/dimen_16dp"
        android:text="@string/sign_up" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_16dp"
        android:hint="@string/name"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_profile">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/lexend_medium"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <include
        android:id="@+id/emailInputLayout"
        layout="@layout/email_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_16dp" />

    <include
        android:id="@+id/passwordInputLayout"
        layout="@layout/password_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_32dp" />

    <Button
        android:id="@+id/signUpButton"
        style="@style/MediumTextView"
        android:layout_width="match_parent"
        android:text="@string/sign_up"
        android:textSize="@dimen/dimen_24sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/signInTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/SmallTextView"
            android:layout_gravity="center"
            android:text="@string/have_an_account" />

        <TextView
            style="@style/SmallTextView"
            android:layout_gravity="center"
            android:text="@string/sign_in"
            android:textColor="?attr/colorPrimary" />

    </LinearLayout>

</LinearLayout>